--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run:
           context: aws_vars
           name: Deploy to S3
-          command: aws s3 sync ~/Sites/circleci-demo-javascript-express s3://last-night-i-dreamt --delete
+          command: aws s3 sync ~/Sites/circleci-demo-javascript-express s3://last-night-i-dreamt --delete --profile dan
 
 workflows:
   version: 2
