--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,9 +42,8 @@ jobs:
           name: Install awscli
           command: sudo pip install awscli
       - run:
-          context: aws_vars
           name: Deploy to S3
-          command: aws s3 sync ~/Sites/circleci-demo-javascript-express s3://last-night-i-dreamt --delete --profile dan
+          command: aws s3 sync ~/Sites/circleci-demo-javascript-express s3://last-night-i-dreamt --delete
 
 workflows:
   version: 2
