--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
       - store_test_results:
           path: test-results.xml
       - persist_to_workspace:
-          root: /home/circleci/demo
+          root: ~/demo
           paths:
             - test
   deploy:
