--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,9 @@ jobs:
       - run:
           name: code-coverage
           command: './node_modules/.bin/nyc report --reporter=text-lcov'
+      - run:
+          name: make-directory
+          command: 'sudo mkdir ~/demo'
       - store_artifacts:
           path: test-results.xml
           prefix: tests
