--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/Sites/circleci-demo-javascript-express
+    working_directory: ~/demo
     docker:
       - image: circleci/node:4.8.2
       - image: mongo:3.4.4
@@ -25,9 +25,6 @@ jobs:
       - run:
           name: code-coverage
           command: './node_modules/.bin/nyc report --reporter=text-lcov'
-      - run:
-          name: make-directory
-          command: 'sudo mkdir ~/demo'
       - store_artifacts:
           path: test-results.xml
           prefix: tests
